--- a/chao-moi-nguoi/index.html
+++ b/chao-moi-nguoi/index.html
@@ -208,7 +208,7 @@ Commenter avatars come from <a href="https://en.gravatar.com/">Gravatar</a>.</p>
 			<div id="respond" class="comment-respond">
 		<h3 id="reply-title" class="comment-reply-title">Trả lời <small><a rel="nofollow" id="cancel-comment-reply-link" href="https://hoangngo07.github.io/mywordpress/chao-moi-nguoi/#respond" style="display:none;">Hủy</a></small>
 </h3>
-<form action="http://localhost/myproject/wordpress/wp-comments-post.php" method="post" id="commentform" class="comment-form" novalidate>
+<form action="https://localhost/myproject/wordpress/wp-comments-post.php" method="post" id="commentform" class="comment-form" novalidate>
 <p class="comment-notes"><span id="email-notes">Email của bạn sẽ không được hiển thị công khai.</span> <span class="required-field-message" aria-hidden="true">Các trường bắt buộc được đánh dấu <span class="required" aria-hidden="true">*</span></span></p>
 <p class="comment-form-comment"><label for="comment">Bình luận <span class="required" aria-hidden="true">*</span></label> <textarea id="comment" name="comment" cols="45" rows="8" maxlength="65525" required></textarea></p>
 <p class="comment-form-author"><label for="author">Tên <span class="required" aria-hidden="true">*</span></label> <input id="author" name="author" type="text" value="" size="30" maxlength="245" required></p>
@@ -227,7 +227,7 @@ Commenter avatars come from <a href="https://en.gravatar.com/">Gravatar</a>.</p>
 			</div>
            <div class="col-md-4 pl-lg-4">
 	<div class="blog-sidebar">
-		<div id="block-2" class="sidebar-search sidebar-widget sidebar-grid shadow mb-50 widget_block widget_search"><form role="search" method="get" action="http://localhost/myproject/wordpress/" class="wp-block-search__button-outside wp-block-search__text-button wp-block-search">
+		<div id="block-2" class="sidebar-search sidebar-widget sidebar-grid shadow mb-50 widget_block widget_search"><form role="search" method="get" action="https://localhost/myproject/wordpress/" class="wp-block-search__button-outside wp-block-search__text-button wp-block-search">
 <label for="wp-block-search__input-1" class="wp-block-search__label">Tìm kiếm</label><div class="wp-block-search__inside-wrapper ">
 <input type="search" id="wp-block-search__input-1" class="wp-block-search__input " name="s" value="" placeholder="" required><button type="submit" class="wp-block-search__button  ">Tìm kiếm</button>
 </div>
