--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ img.emoji {
 			</div>
            <div class="col-md-4 pl-lg-4">
 	<div class="blog-sidebar">
-		<div id="block-2" class="sidebar-search sidebar-widget sidebar-grid shadow mb-50 widget_block widget_search"><form role="search" method="get" action="http://localhost/myproject/wordpress/" class="wp-block-search__button-outside wp-block-search__text-button wp-block-search">
+		<div id="block-2" class="sidebar-search sidebar-widget sidebar-grid shadow mb-50 widget_block widget_search"><form role="search" method="get" action="https://localhost/myproject/wordpress/" class="wp-block-search__button-outside wp-block-search__text-button wp-block-search">
 <label for="wp-block-search__input-1" class="wp-block-search__label">Tìm kiếm</label><div class="wp-block-search__inside-wrapper ">
 <input type="search" id="wp-block-search__input-1" class="wp-block-search__input " name="s" value="" placeholder="" required><button type="submit" class="wp-block-search__button  ">Tìm kiếm</button>
 </div>
