--- a/chao-moi-nguoi/index.html
+++ b/chao-moi-nguoi/index.html
@@ -130,7 +130,6 @@ img.emoji {
                                      <div id="primary-menu" class="nav-menu"><ul>
 <li class="page_item page-item-9"><a href="https://hoangngo07.github.io/mywordpress/blog/">Blog</a></li>
 <li class="page_item page-item-6"><a href="https://hoangngo07.github.io/mywordpress/">Home</a></li>
-<li class="page_item page-item-2 current_page_parent"><a href="https://hoangngo07.github.io/mywordpress/Trang%20mẫu/">Trang Mẫu</a></li>
 <li class="page_item page-item-18"><a href="https://hoangngo07.github.io/mywordpress/xay-dung/">WELL COME</a></li>
 </ul></div>
                                 </nav>
@@ -208,7 +207,7 @@ Commenter avatars come from <a href="https://en.gravatar.com/">Gravatar</a>.</p>
 			<div id="respond" class="comment-respond">
 		<h3 id="reply-title" class="comment-reply-title">Trả lời <small><a rel="nofollow" id="cancel-comment-reply-link" href="https://hoangngo07.github.io/mywordpress/chao-moi-nguoi/#respond" style="display:none;">Hủy</a></small>
 </h3>
-<form action="https://localhost/myproject/wordpress/wp-comments-post.php" method="post" id="commentform" class="comment-form" novalidate>
+<form action="http://localhost/myproject/wordpress/wp-comments-post.php" method="post" id="commentform" class="comment-form" novalidate>
 <p class="comment-notes"><span id="email-notes">Email của bạn sẽ không được hiển thị công khai.</span> <span class="required-field-message" aria-hidden="true">Các trường bắt buộc được đánh dấu <span class="required" aria-hidden="true">*</span></span></p>
 <p class="comment-form-comment"><label for="comment">Bình luận <span class="required" aria-hidden="true">*</span></label> <textarea id="comment" name="comment" cols="45" rows="8" maxlength="65525" required></textarea></p>
 <p class="comment-form-author"><label for="author">Tên <span class="required" aria-hidden="true">*</span></label> <input id="author" name="author" type="text" value="" size="30" maxlength="245" required></p>
@@ -219,7 +218,7 @@ Commenter avatars come from <a href="https://en.gravatar.com/">Gravatar</a>.</p>
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="d260610c07"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="185"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="25"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 	<p class="akismet_comment_form_privacy_notice">Website này sử dụng Akismet để hạn chế spam. <a href="https://akismet.com/privacy/" target="_blank" rel="nofollow noopener">Tìm hiểu bình luận của bạn được duyệt như thế nào</a>.</p>
@@ -227,7 +226,7 @@ Commenter avatars come from <a href="https://en.gravatar.com/">Gravatar</a>.</p>
 			</div>
            <div class="col-md-4 pl-lg-4">
 	<div class="blog-sidebar">
-		<div id="block-2" class="sidebar-search sidebar-widget sidebar-grid shadow mb-50 widget_block widget_search"><form role="search" method="get" action="https://localhost/myproject/wordpress/" class="wp-block-search__button-outside wp-block-search__text-button wp-block-search">
+		<div id="block-2" class="sidebar-search sidebar-widget sidebar-grid shadow mb-50 widget_block widget_search"><form role="search" method="get" action="http://localhost/myproject/wordpress/" class="wp-block-search__button-outside wp-block-search__text-button wp-block-search">
 <label for="wp-block-search__input-1" class="wp-block-search__label">Tìm kiếm</label><div class="wp-block-search__inside-wrapper ">
 <input type="search" id="wp-block-search__input-1" class="wp-block-search__input " name="s" value="" placeholder="" required><button type="submit" class="wp-block-search__button  ">Tìm kiếm</button>
 </div>
